# VNASelf

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  README_INTEGRATION.md  README_VISUALIZATION.md  app.py  calendar_server.py  config.py  demo_chat_history.py  demo_visualization.py  env_template.txt  main.py  package-lock.json  package.json  playground.ipynb  pyproject.toml  requirements.txt  test.ipynb  test_chat_history.py  test_conflict_detection.py  token.json
NekHelp/agents/: calendar_agent.py
agents/: __init__.py  base_agent.py  calendar_agent.py  finance_agent.py  health_agent.py  supervisor_agent.py
backend/: backend_api.py  config.py  main.py  requirements.txt  run_vnaself.py  run_x23d8.py
backend/agents/: __init__.py  calendar_agent.py  finance_agent.py  note_agent.py  ocr_agent.py  search_agent.py  supervisor_agent.py
change/: CHANGELOG.md
core/: multi_agent_system.py
deploy/: package-lock.json  package.json
docs/: API.md  ARCHITECTURE.md  CI_CD_SETUP.md  DOCKER.md  FINANCE_AGENT.md  GOOGLE_CALENDAR_TROUBLESHOOTING.md  OPTIMAL_TIME_SUGGESTIONS.md  README.md  SETUP.md  TESTING_PROMPTS.md  TROUBLESHOOTING.md  USAGE.md
frontend/: .gitignore  index.html  package-lock.json  package.json  test-user-profile.html
models/: chat_history.py
scripts/: create_logs_table.py
server/: calendar_server.py
services/: chat_history_service.py  mcp_service.py  payment_history_service.py
visualization/: README.md  create_mermaid_diagram.py  graph.py  graph_visualization.py  langgraph.json  langsmith_integration.py  run_visualizations.py
(+53 files in other folders)
